--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,6 +6,24 @@
   text-align: center;
 }
 
+.card-body {
+  border-style: solid;
+  border-radius: 10px;
+  border-color: #343a40;
+  border-width: 5px;
+  background-color: lightgray;
+}
+
+#paymentBackground {
+  position: fixed;
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
 #item_amount {
   position: absolute;
   bottom: -10px;
@@ -18,18 +36,26 @@
 }
 
 #paymentCard {
+  border: none;
+  background: transparent;
   position: fixed;
-  z-index: 5;
   height: 60vh;
   width: 50vw;
   top: 50%;
   left: 50%;
-  margin-top: -30vh; 
+  margin-top: -40vh; 
   margin-left: -25vw; 
   display: none;
 }
 
-#checkoutBttn {
+#cardBody {
+  position: relative;
+  z-index: 5;
+}
+
+
+
+#checkoutBttn, #deleteBttn{
   cursor: pointer;
   text-align: center;
   line-height: 50px;
@@ -47,12 +73,73 @@
 #checkoutBttn:hover {
   color: white;
   background-color: #28a745;
-
 }
 #checkoutBttn:active {
   color: white;
   background-color: #1f8035;
+}
 
+#deleteBttn:hover {
+  color: white;
+  background-color: #a72828;
+}
+
+#deleteBttn:active {
+  color: white;
+  background-color: #801f1f;
+}
+
+#closePayment {
+  position: absolute;
+  top: 2px;
+  right: 20px;
+  cursor: pointer;
+  text-align: center;
+  line-height: 50px;
+  width: 90px;
+  height: 50px;
+  background-color: #343a40;
+  color: #28a745;
+  border-color: #28a745;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+#closePayment:hover {
+  color: white;
+  background-color: #a72828;
+}
+
+#closePayment:active {
+  color: white;
+  background-color: #801f1f;
+}
+
+#submitPayment {
+  cursor: pointer;
+  text-align: center;
+  line-height: 50px;
+  width: 90px;
+  height: 50px;
+  background-color: #343a40;
+  color: #28a745;
+  border-color: #28a745;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+#submitPayment:hover {
+  color: white;
+  background-color: #28a745;
+}
+
+#submitPayment:active {
+  color: white;
+  background-color: #1f8035;
 }
 
 .columnName {
@@ -79,6 +166,7 @@ body {
 
 .container {
   background-color: lightgray;
+  margin-bottom: 5vh;
 }
 
 footer {
